--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@ git+https://github.com/caltechads/brigid-api-client@master
 
 # Other utils
 # ------------------------------------------------------------------------------
-ipython==7.13.0                               # https://github.com/ipython/ipython
+ipython>=7.13.0                               # https://github.com/ipython/ipython
 pytz==2019.3                                  # https://github.com/stub42/pytz
 tabulate==0.8.7                               # https://github.com/astanin/python-tabulate
 giturlparse==0.9.2                            # https://github.com/nephila/giturlparse
-dateparser==0.7.4                             # https://github.com/scrapinghub/dateparser
+PyYAML>=5.1.2                                 # https://github.com/yaml/pyyaml
 
 # Deployment
 # ------------------------------------------------------------------------------
@@ -25,4 +25,4 @@ pycodestyle==2.6.0                            # https://github.com/PyCQA/pycodes
 # Deployment
 # ------------------------------------------------------------------------------
 twine                                         # https://github.com/pypa/twine/
-tox                                           # https://github.com/tox-dev/to
+tox                                           # https://github.com/tox-dev/tox
